--- a/www/index.html
+++ b/www/index.html
@@ -16,10 +16,10 @@
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-<link rel="stylesheet" href="styles.c8c2dc97bb40cadf1768.css"></head>
+</head>
 
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="runtime.d1500c42b704e6e1ee89.js"></script><script type="text/javascript" src="es2015-polyfills.9a45583bd302741688e1.js" nomodule></script><script type="text/javascript" src="polyfills.1783961edf653265edc9.js"></script><script type="text/javascript" src="cordova.b04376d424a21d95d017.js"></script><script type="text/javascript" src="main.26fa32cd76d9fd264196.js"></script></body>
+<script type="text/javascript" src="runtime.js"></script><script type="text/javascript" src="es2015-polyfills.js" nomodule></script><script type="text/javascript" src="polyfills.js"></script><script type="text/javascript" src="styles.js"></script><script type="text/javascript" src="vendor.js"></script><script type="text/javascript" src="main.js"></script></body>
 
 </html>
